Refactor: Implement Dual Ledger System (Isolated PSP and Bank Ledgers)